<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    tools:context=".MainActivity">

    <com.itexico.Utils.VideoSurface
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myVideo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.GridLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/grid"
        android:clickable="true"
        android:onClick="InfoTransitionClick"
        android:background="@drawable/background_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/default_gap"
        android:visibility="visible"
        app:columnCount="4">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/frame_rate"
            android:textColor="@android:color/white"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/frate"
            android:text="@string/empty_field"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:textColor="@android:color/white"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/double_enough"
            android:layout_marginStart="@dimen/double_enough"
            android:text="@string/lost_frames"
            android:textColor="@android:color/white"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/empty_field"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:textColor="@android:color/white"
            android:id="@+id/fLost" />

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/frames_displayed"
            android:textColor="@android:color/white"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/fDisplayed"
            android:text="@string/empty_field"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:textColor="@android:color/white"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/double_enough"
            android:layout_marginStart="@dimen/double_enough"
            android:text="@string/fps"
            android:textColor="@android:color/white"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/fps"
            android:text="@string/fps_value"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label"
        android:textColor="@android:color/white"
        android:background="@drawable/background_button"
        android:id="@+id/buttonShow"
        android:onClick="InfoTransitionClick"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
